docs(style): avoid scrollbars on code snippets

--- a/docs/source/stylesheets/components/_code-highlight.scss
+++ b/docs/source/stylesheets/components/_code-highlight.scss
@@ -3,7 +3,8 @@
   border-radius: 4px;
   max-width: 100%;
   display: block;
-
+  overflow: auto;
+  font-size: 14px;
 }
 @if $highlight-theme == 'github' {
   .highlight {
