--- a/docs/source/stylesheets/components/_sidebar.scss
+++ b/docs/source/stylesheets/components/_sidebar.scss
@@ -9,7 +9,7 @@ nav.sidebar {
   &.fixed {
     position: fixed;
     top: $navigation-height + 16px;
-    z-index: 12;
+    z-index: 9;
   }
 
 
